--- a/Keyhanatr/Areas/Admin/Views/Products/Index.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/Products/Index.cshtml
@@ -66,6 +66,9 @@
 
                             |<a asp-controller="ProductColors" asp-action="Index" asp-route-id="@item.ProductId">
                                 رنگ ها
+                            </a>|
+                            <a asp-controller="Discount" asp-action="Index" asp-route-id="@item.ProductId">
+                                تخفیف
                             </a>
 
                         </div>
