--- a/Keyhanatr/Areas/Admin/Views/ProductGalleries/Create.cshtml
+++ b/Keyhanatr/Areas/Admin/Views/ProductGalleries/Create.cshtml
@@ -7,10 +7,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-            <form asp-action="Create" enctype="multipart/form-data" method="POST">
+            <form asp-action="Create" enctype="multipart/form-data" method="post">
+                <input type="hidden" asp-for="ProductId"  />
                 <div class="form-group">
                     <label asp-for="ProductId" class="control-label"></label>
-                    <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
+                    <select disabled asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
                 </div>
                 <div>
                     <label for="#pic">
